--- a/public/lexnotes-skeleton.html
+++ b/public/lexnotes-skeleton.html
@@ -471,7 +471,7 @@ textarea{resize:none;}
         'https://unpkg.com/react-dom@18.2.0/umd/react-dom.production.min.js',
         'https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js'
       ],'ReactDOM');
-      await loadScript('/lexnotes-app.compiled.js?v='+Date.now());
+      await loadScript('/lexnotes-app.compiled.js');
     }catch(err){
       showBootError((err&&err.message)||'Unknown startup error');
     }
