--- a/public/lexnotes-skeleton.html
+++ b/public/lexnotes-skeleton.html
@@ -178,6 +178,7 @@ textarea{resize:none;}
 .wgrid{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;padding:0 24px 24px;align-content:start;}
 .wcard{background:var(--surface);border:1px solid var(--border);border-radius:10px;overflow:hidden;}
 .wcard.span2{grid-column:span 2;}
+.wcard.dragging{opacity:.55;border-color:rgba(201,168,76,.45);}
 .whead{padding:10px 13px;border-bottom:1px solid var(--border);display:flex;align-items:center;justify-content:space-between;}
 .wtitle{font-size:8.5px;font-weight:700;letter-spacing:2px;text-transform:uppercase;color:var(--dim);font-family:'JetBrains Mono',monospace;}
 .wbody{padding:11px 13px;}
@@ -201,6 +202,7 @@ textarea{resize:none;}
 .nitem{padding:9px 10px;border-radius:5px;cursor:pointer;border-left:2px solid transparent;margin:2px 5px;transition:background .1s;}
 .nitem:hover{background:var(--surface2);}
 .nitem.on{background:var(--surface2);border-left-color:var(--accent);border-radius:0 5px 5px 0;margin-left:0;padding-left:11px;}
+.nitem small{color:var(--dim);font-size:9.5px;}
 .nbadge{font-size:9px;font-weight:700;letter-spacing:1px;text-transform:uppercase;font-family:'JetBrains Mono',monospace;margin-bottom:3px;}
 .ntitle{font-size:12px;font-weight:500;margin-bottom:2px;line-height:1.35;}
 .npreview{font-size:10.5px;color:var(--muted);white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
@@ -216,6 +218,12 @@ textarea{resize:none;}
 .etitle{font-family:'Playfair Display',serif;font-size:24px;font-weight:700;background:none;border:none;outline:none;width:100%;margin-bottom:4px;letter-spacing:-.3px;line-height:1.3;color:var(--text);}
 .emeta{font-size:10.5px;color:var(--dim);font-family:'JetBrains Mono',monospace;margin-bottom:22px;display:flex;gap:10px;flex-wrap:wrap;padding-bottom:16px;border-bottom:1px solid var(--border);}
 .ebody{font-size:13.5px;line-height:1.85;color:var(--text);background:none;border:none;outline:none;width:100%;min-height:360px;font-family:'DM Sans',sans-serif;}
+.ebody-rich{font-size:14px;line-height:1.85;color:var(--text);background:transparent;border:1px solid var(--border);border-radius:8px;outline:none;width:100%;min-height:360px;padding:14px 16px;font-family:'DM Sans',sans-serif;}
+.ebody-rich:focus{border-color:rgba(201,168,76,.4);background:rgba(201,168,76,.03);}
+.note-toolbar{display:flex;gap:6px;margin-bottom:10px;align-items:center;flex-wrap:wrap;padding-bottom:10px;border-bottom:1px solid var(--border);}
+.subfilter{display:flex;gap:6px;padding:6px 9px;border-bottom:1px solid var(--border);flex-wrap:wrap;}
+.subchip{padding:2px 7px;border-radius:99px;font-size:10px;font-family:'JetBrains Mono',monospace;color:var(--muted);border:1px solid var(--border);cursor:pointer;}
+.subchip.on{background:var(--accent-dim);color:var(--accent);border-color:rgba(201,168,76,.3);}
 .bsec{margin-bottom:20px;}
 .blbl{font-size:8.5px;font-weight:700;letter-spacing:2.5px;text-transform:uppercase;color:var(--accent);font-family:'JetBrains Mono',monospace;margin-bottom:5px;display:block;opacity:.85;}
 .bta{background:transparent;border:1px solid var(--border);border-radius:6px;padding:9px 12px;font-size:13px;line-height:1.7;color:var(--text);outline:none;width:100%;min-height:56px;font-family:'DM Sans',sans-serif;transition:border-color .14s,background .14s;}
@@ -401,6 +409,8 @@ textarea{resize:none;}
 .setsection{background:var(--surface);border:1px solid var(--border);border-radius:10px;padding:20px;display:flex;flex-direction:column;gap:16px;}
 .setrow{display:flex;align-items:center;justify-content:space-between;padding:10px 0;border-bottom:1px solid var(--border);}
 .setrow:last-child{border:none;}
+.setrow.drag{cursor:grab;touch-action:none;user-select:none;}
+.setrow.drag.on{background:var(--surface2);}
 .toggle-track{width:36px;height:20px;border-radius:99px;background:var(--border);cursor:pointer;position:relative;transition:background .2s;flex-shrink:0;}
 .toggle-track.on{background:var(--accent);}
 .toggle-thumb{width:16px;height:16px;border-radius:50%;background:white;position:absolute;top:2px;left:2px;transition:left .2s;}
